✨ feat: change the style of the toolbar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,17 @@
 <header>
-  <mat-toolbar>
-    <span>My Application</span>
+  <mat-toolbar color="primary" class="mat-elevation-z4">
+    <div class="toolbar-title">
+      <span>Advice from a friend </span>
+      😉
+    </div>
+    <a target="_blank" href="https://www.instagram.com/dev.brasil/">
+      <i class="fab fa-instagram"></i>
+    </a>
   </mat-toolbar>
 </header>
+
+<footer>
+  <mat-toolbar color="primary">
+    Created with <i class="fas fa-heart"></i> by Christian Santos</mat-toolbar
+  >
+</footer>
