--- a/src/app/components/card-search-advice/card-search-advice.component.html
+++ b/src/app/components/card-search-advice/card-search-advice.component.html
@@ -1,4 +1,4 @@
 <mat-card>
   <button mat-flat-button color="accent">Ask for advice</button>
-  <p>Smile and the world smiles with you. Frown and you're on your own.</p>
+  <p>{{ advice }}</p>
 </mat-card>
