🐛 fix: button bug fix

--- a/src/app/components/card-search-advice/card-search-advice.component.html
+++ b/src/app/components/card-search-advice/card-search-advice.component.html
@@ -1,4 +1,6 @@
 <mat-card>
-  <button mat-flat-button color="accent">Ask for advice</button>
+  <button (click)="getAdvice()" mat-flat-button color="accent">
+    Ask for advice
+  </button>
   <p>{{ advice }}</p>
 </mat-card>
