--- a/src/app/components/card-search-advice/card-search-advice.component.html
+++ b/src/app/components/card-search-advice/card-search-advice.component.html
@@ -1,6 +1,13 @@
-<mat-card>
+<mat-card class="mat-elevation-z4">
   <button (click)="getAdvice()" mat-flat-button color="accent">
-    Ask for advice
+    Ask for advice 💬
   </button>
-  <p>{{ advice }}</p>
+
+  <p
+    *ngIf="advice; else loader"
+    [innerText]="'&quot; ' + advice + ' &quot;'"
+  ></p>
+  <ng-template #loader>
+    <mat-spinner color="accent"></mat-spinner>
+  </ng-template>
 </mat-card>
