--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,17 +1,25 @@
 <header>
   <mat-toolbar color="primary" class="mat-elevation-z4">
     <div class="toolbar-title">
-      <span>Advice from a friend </span>
-      😉
+      <span>The friendly advisor</span>
+      💬
     </div>
-    <a target="_blank" href="https://www.instagram.com/dev.brasil/">
-      <i class="fab fa-instagram"></i>
-    </a>
+    <div class="social-icon">
+      <a target="_blank" href="https://www.instagram.com/dev.brasil/">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/cristhian-felipe-santos/"
+      >
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
   </mat-toolbar>
 </header>
 
 <footer>
   <mat-toolbar color="primary">
-    Created with <i class="fas fa-heart"></i> by Christian Santos</mat-toolbar
+    Created with <i class="fas fa-heart"></i> by Cristhian Santos</mat-toolbar
   >
 </footer>
