--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -20,6 +20,11 @@ header {
         font-size: 1.4em;
       }
     }
+    .social-icon {
+      a {
+        margin: 0 6px;
+      }
+    }
   }
 }
 footer {
