--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,3 @@
-:root {
-  --background-color: #121214;
-}
-
 html,
 body {
   height: 100%;
@@ -14,10 +10,8 @@ body {
   align-items: center;
   justify-content: center;
 
-  background: linear-gradient(
-    137deg,
-    rgba(28, 159, 147, 1) 0%,
-    rgba(88, 255, 186, 1) 48%,
-    rgba(178, 255, 174, 1) 100%
-  );
+  background-image: url("https://images.pexels.com/photos/572897/pexels-photo-572897.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
